2005-12-11  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagging vlad-1_2_2

	* lib/identifier.h :

	  - Fixed error in the VLAD_IDENT_IS_*() macros.

2005-12-10  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagging vlad-1_2_1

	* Makefile.in :

	  - updatetab.h is now a dependency of seqtab.h.

	* lib/seqtab.cpp :
	* lib/seqtab.h :

	  - The updateref::verify() function now takes a reference to update
	    table so that it can check if the name of the update reference is
	    actually in the update table and that the varlist matches the
	    entity list.

	* lib/updatetab.cpp :
	* lib/updatetab.h :

	  - Cleanup.

	  - In the get() functions, precond and postcond expressions may now
	    be null.

	* lib/polbase.cpp :

	  - add_seqtab() is now passed the update table too for extra checking.

2005-12-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_2_0

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Removed unnecessary calls to encode_fact() in compute_generate().

	  - Added another print_fact() function. This one take a vlad_fact
	    instead of a fact id.

	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/expression.cpp :
	* lib/expression.h :

	  - Added traverse functionality.

	* lib/list.cpp :
	* lib/list.h :

	  - Added a list::traverse() function and an abstract list_trav class
	    for traversing the list.

2005-12-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :

	  - Name cleanup: vlad_{string|number} -> vlad_{string|number}list_item

2005-12-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_1_2

	* test/mem_test.sh :

	  - Added memory test script.

	* configure :
	* configure.ac :
	* lib/config.h.in :

	  - Added a new --enable-memtest option to compile the alternate
	    memory allocator/deallocator functions and classes.

	* lib/Makefile.in :
