@@ -768,7 +768,8 @@ int vlad_polbase::compute_generate(FILE *a_fs)
 
   for (i = 0; i <= VLAD_LIST_LENGTH(m_setable); i++) {
     unsigned int i_con;
-    unsigned int i_exp;
+    unsigned int i_exp1;
+    unsigned int i_exp2;
 
     /* constraint loop */
     for (i_con = 0; i_con < VLAD_LIST_LENGTH(m_ctable); i_con++) {
@@ -780,49 +781,46 @@ int vlad_polbase::compute_generate(FILE *a_fs)
       if ((retval = m_ctable->get(i_con, &exp_e, &exp_c, &exp_n)) != VLAD_OK)
         return retval;
 
-      fprintf(a_fs, "  ");
-
       /* constaint expression */
-      for (i_exp = 0; i_exp < VLAD_LIST_LENGTH(exp_e); i_exp++) {
-        if ((retval = exp_e->get(i_exp, &fact)) != VLAD_OK)
+      for (i_exp1 = 0; i_exp1 < VLAD_LIST_LENGTH(exp_e); i_exp1++) {
+        if ((retval = exp_e->get(i_exp1, &fact)) != VLAD_OK)
           return retval;
+
+        fprintf(a_fs, "  ");
 
         print_fact(fact, i, a_fs);
 
-        if (i_exp + 1 < VLAD_LIST_LENGTH(exp_e))
-          fprintf(a_fs, " %s\n  ", VLAD_STR_AND);
+        fprintf(a_fs, " %s\n    ", VLAD_STR_ARROW);
+        
+        /* constraint condition */
+        for (i_exp2 = 0; i_exp2 < VLAD_LIST_LENGTH(exp_c); i_exp2++) {
+          if ((retval = exp_c->get(i_exp2, &fact)) != VLAD_OK)
+            return retval;
+        
+          print_fact(fact, i, a_fs);
+        
+          if (i_exp2 + 1 < VLAD_LIST_LENGTH(exp_c) || exp_n != NULL)
+            fprintf(a_fs, " %s\n    ", VLAD_STR_AND);
+        }
+        
+        /* constraint negative condition */
+        for (i_exp2 = 0; i_exp2 < VLAD_LIST_LENGTH(exp_n); i_exp2++) {
+          if ((retval = exp_n->get(i_exp2, &fact)) != VLAD_OK)
+            return retval;
+        
+          fprintf(a_fs, "%s ", VLAD_STR_NOT);
+        
+          print_fact(fact, i, a_fs);
+        
+          if (i_exp2 + 1 < VLAD_LIST_LENGTH(exp_n))
+            fprintf(a_fs, "%s\n    ", VLAD_STR_AND);
+        }
+        
+        if (exp_c == NULL && exp_n == NULL)
+          fprintf(a_fs, "%s%s\n", VLAD_STR_TRUE, VLAD_STR_TERMINATOR);
+        else
+          fprintf(a_fs, "%s\n", VLAD_STR_TERMINATOR);
       }
-
-      fprintf(a_fs, " %s\n    ", VLAD_STR_ARROW);
-
-      /* constraint condition */
-      for (i_exp = 0; i_exp < VLAD_LIST_LENGTH(exp_c); i_exp++) {
-        if ((retval = exp_c->get(i_exp, &fact)) != VLAD_OK)
-          return retval;
-
-        print_fact(fact, i, a_fs);
-
-        if (i_exp + 1 < VLAD_LIST_LENGTH(exp_c) || exp_n != NULL)
-          fprintf(a_fs, " %s\n    ", VLAD_STR_AND);
-      }
-
-      /* constraint negative condition */
-      for (i_exp = 0; i_exp < VLAD_LIST_LENGTH(exp_n); i_exp++) {
-        if ((retval = exp_n->get(i_exp, &fact)) != VLAD_OK)
-          return retval;
-
-        fprintf(a_fs, "%s ", VLAD_STR_NOT);
-
-        print_fact(fact, i, a_fs);
-
-        if (i_exp + 1 < VLAD_LIST_LENGTH(exp_n))
-          fprintf(a_fs, "%s\n    ", VLAD_STR_AND);
-      }
-
-      if (exp_c == NULL && exp_n == NULL)
-        fprintf(a_fs, "%s%s\n", VLAD_STR_TRUE, VLAD_STR_TERMINATOR);
-      else
-        fprintf(a_fs, "%s\n", VLAD_STR_TERMINATOR);
     }
   }
 
@@ -833,7 +831,8 @@ int vlad_polbase::compute_generate(FILE *a_fs)
 
   /* state loop */
   for (i = 0; i < VLAD_LIST_LENGTH(m_setable); i++) {
-    unsigned int i_exp;
+    unsigned int i_exp1;
+    unsigned int i_exp2;
     char *name;
     vlad_fact *fact;
     vlad_stringlist *list_s = NULL;
@@ -846,40 +845,38 @@ int vlad_polbase::compute_generate(FILE *a_fs)
     if ((retval = m_utable->replace(name, list_s, &exp_pr, &exp_po)) != VLAD_OK)
       return retval;
 
-    fprintf(a_fs, "  ");
-
     /* postcondition loop */
-    for (i_exp = 0; i_exp < VLAD_LIST_LENGTH(exp_po); i_exp++) {
-      if ((retval = exp_po->get(i_exp, &fact)) != VLAD_OK)
+    for (i_exp1 = 0; i_exp1 < VLAD_LIST_LENGTH(exp_po); i_exp1++) {
+      if ((retval = exp_po->get(i_exp1, &fact)) != VLAD_OK)
         return retval;
+
+      fprintf(a_fs, "  ");
 
       print_fact(fact, i + 1, a_fs);
 
-      if (i_exp + 1 < VLAD_LIST_LENGTH(exp_po))
-          fprintf(a_fs, " %s\n  ", VLAD_STR_AND);
+      fprintf(a_fs, " %s\n    ", VLAD_STR_ARROW);
+  
+      /* precondition loop */
+      for (i_exp2 = 0; i_exp2 < VLAD_LIST_LENGTH(exp_pr); i_exp2++) {
+        if ((retval = exp_pr->get(i_exp2, &fact)) != VLAD_OK)
+          return retval;
+  
+        print_fact(fact, i, a_fs);
+  
+        if (i_exp2 + 1 < VLAD_LIST_LENGTH(exp_pr))
+          fprintf(a_fs, " %s\n    ", VLAD_STR_AND);
+      }
+
+      if (exp_pr == NULL)
+        fprintf(a_fs, "%s%s\n", VLAD_STR_TRUE, VLAD_STR_TERMINATOR);
+      else
+        fprintf(a_fs, "%s\n", VLAD_STR_TERMINATOR);
     }
 
-    VLAD_MEM_DELETE(exp_po);
-
-    fprintf(a_fs, " %s\n    ", VLAD_STR_ARROW);
-
-    /* precondition loop */
-    for (i_exp = 0; i_exp < VLAD_LIST_LENGTH(exp_pr); i_exp++) {
-      if ((retval = exp_pr->get(i_exp, &fact)) != VLAD_OK)
-        return retval;
-
-      print_fact(fact, i, a_fs);
-
-      if (i_exp + 1 < VLAD_LIST_LENGTH(exp_pr))
-        fprintf(a_fs, " %s\n    ", VLAD_STR_AND);
-    }
-
-    VLAD_MEM_DELETE(exp_pr);
-
-    if (exp_pr == NULL)
-      fprintf(a_fs, "%s%s\n", VLAD_STR_TRUE, VLAD_STR_TERMINATOR);
-    else
-      fprintf(a_fs, "%s\n", VLAD_STR_TERMINATOR);
+    if (exp_po != NULL)
+      VLAD_MEM_DELETE(exp_po);
+    if (exp_pr != NULL)
+      VLAD_MEM_DELETE(exp_pr);
   }
 
   fprintf(a_fs, "\n");
