@@ -1,3 +1,10 @@
+2005-12-14  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
+
+	* lib/polbase.h :
+
+	  - Fixed rule dumping format so that no rule has more than one fact
+	    in its head.
+
 2005-12-11  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
 	* Tagging vlad-1_2_2
